fixed an issue when contact form fields had a value, the placeholder would overlap with the value

--- a/src/Components/Layout/Contact/Contact.scss
+++ b/src/Components/Layout/Contact/Contact.scss
@@ -56,28 +56,36 @@
   top: 6.4em;
   left: 0.5em;
 }
-input:focus + label {
-  font-size: 1rem;
-  padding: 0 0.5em;
-  background-color: $bgColour;
-  color: $yellow;
-}
+
+.activeName,
 #nameInput:focus {
   & + label {
     transform: translateY(-1em);
+    font-size: 1rem;
+    padding: 0 0.5em;
+    background-color: $bgColour;
+    color: $yellow;
   }
 }
+.activeMail,
 #mailInput:focus {
   & + label {
     transform: translateY(-0.4em);
+    font-size: 1rem;
+    padding: 0 0.5em;
+    background-color: $bgColour;
+    color: $yellow;
   }
 }
-#messageTextArea:focus + label {
-  color: $yellow;
-  font-size: 1rem;
-  transform: translateY(0.45em);
-  background-color: $bgColour;
-  padding: 0 0.5em;
+.activeMessage,
+#messageTextArea:focus {
+  & + label {
+    color: $yellow;
+    font-size: 1rem;
+    transform: translateY(0.45em);
+    background-color: $bgColour;
+    padding: 0 0.5em;
+  }
 }
 
 // submit button style
@@ -150,7 +158,7 @@ input:focus + label {
 
 @media (max-width: 1280px) {
   .contactForm {
-    width: 90%;
+    width: 60%;
   }
 }
 @media (max-width: 600px) {
